// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deletes a file correctly 1`] = `
<div>
  <div
    class="ui basic segment ui container one column grid"
  >
    <div
      class="row"
    >
      <div
        class="ten wide column"
      >
        <h2>
          Study Documents
        </h2>
      </div>
      <div
        class="six wide column"
      >
        <label
          class="ui large compact icon primary right floated left labeled button"
          for="file"
          role="button"
        >
          <i
            aria-hidden="true"
            class="cloud upload icon"
          />
          Upload Document
        </label>
        <input
          hidden=""
          id="file"
          multiple=""
          type="file"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="sixteen wide column"
      >
        <section
          class="noPadding"
        >
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <span
              class="smallLabel"
            >
              Filter by:
            </span>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Approval status
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui orange tiny basic label text"
                  >
                    Pending review
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui teal tiny basic label text"
                  >
                    Approved
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui red tiny basic label text"
                  >
                    Changes needed
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui blue tiny basic label text"
                  >
                    Processed
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui blue tiny basic label text"
                  >
                    Updated
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                File type
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="shipping icon"
                    />
                     Shipping Manifest
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="hospital icon"
                    />
                     Clinical/Phenotype Data
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="dna icon"
                    />
                     Sequencing Manifest
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="question icon"
                    />
                     Other
                  </small>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <span
              class="smallLabel"
            >
              Sorted by:
            </span>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Date option
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Create date
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Modified date
                  </span>
                </div>
              </div>
            </div>
            <button
              class="ui basic icon button"
              data-testid="sort-direction-button"
            >
              <i
                aria-hidden="true"
                class="sort content ascending icon"
              />
            </button>
          </div>
          <div
            class="ui basic compact right floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <div
              class="ui icon input"
            >
              <input
                type="text"
                value=""
              />
              <i
                aria-hidden="true"
                class="search icon"
              />
            </div>
          </div>
        </section>
        <table
          class="ui selectable stackable very basic very compact table"
        >
          <tbody
            class=""
          >
            <tr
              class="cursor-pointer"
              data-testid="file-item"
              style="background-color: inherit;"
            >
              <td
                class="center aligned"
              >
                <div
                  class="ui header"
                >
                  <span>
                    <div
                      class="ui orange tiny basic label"
                    >
                      Pending review
                    </div>
                  </span>
                </div>
              </td>
              <td
                class=""
              >
                <span
                  class="ui medium header"
                >
                  <a
                    href="/study/undefined/documents/SF_5ZPEM167"
                  >
                    organization.jpeg
                  </a>
                </span>
                <p
                  class="noMargin"
                >
                  Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
                </p>
                <div
                  class="ui horizontal link list"
                  role="list"
                >
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="middle aligned content"
                    >
                      <i
                        aria-hidden="true"
                        class="grey hospital small icon"
                      />
                      Clinical/Phenotype Data
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      Modified
                       
                      <time
                        datetime="2018-09-27T05:32:26.000Z"
                        title="27 Sept 2018"
                      >
                        7 months ago
                      </time>
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      3
                       version
                      s
                       
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      5.5 kB
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="center aligned"
              >
                <div
                  class="ui small buttons"
                >
                  <button
                    class="ui basic compact icon button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="download-file"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="trash alternate icon"
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="cursor-pointer"
              data-testid="file-item"
              style="background-color: inherit;"
            >
              <td
                class="center aligned"
              >
                <div
                  class="ui header"
                >
                  <span>
                    <div
                      class="ui orange tiny basic label"
                    >
                      Pending review
                    </div>
                  </span>
                </div>
              </td>
              <td
                class=""
              >
                <span
                  class="ui medium header"
                >
                  <a
                    href="/study/undefined/documents/SF_Y07IN1HO"
                  >
                    its.mp3
                  </a>
                </span>
                <p
                  class="noMargin"
                >
                  Question meeting move recognize.
                </p>
                <div
                  class="ui horizontal link list"
                  role="list"
                >
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="middle aligned content"
                    >
                      <i
                        aria-hidden="true"
                        class="grey shipping small icon"
                      />
                      Shipping Manifest
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      Modified
                       
                      <time
                        datetime="2019-04-06T07:51:17.000Z"
                        title="6 Apr 2019"
                      >
                        2 weeks ago
                      </time>
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      5
                       version
                      s
                       
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      6.8 kB
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="center aligned"
              >
                <div
                  class="ui small buttons"
                >
                  <button
                    class="ui basic compact icon button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="download-file"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="trash alternate icon"
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="ui divider"
        />
      </div>
    </div>
    <div
      class="centered row"
    >
      <form>
        <div
          class="ui placeholder piled segment"
        >
          <div
            class="ui icon header"
          >
            <i
              aria-hidden="true"
              class="file outline icon"
            />
            To upload Study Documents drag and drop a file here
            <br />
            <small>
              or
            </small>
          </div>
          <br />
          <label
            class="ui icon primary left labeled button"
            for="file"
            role="button"
          >
            <i
              aria-hidden="true"
              class="file outline icon"
            />
            Choose a file
          </label>
          <input
            hidden=""
            id="file"
            multiple=""
            type="file"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`deletes a file correctly 2`] = `
<div>
  <div
    class="ui basic segment ui container one column grid"
  >
    <div
      class="row"
    >
      <div
        class="ten wide column"
      >
        <h2>
          Study Documents
        </h2>
      </div>
      <div
        class="six wide column"
      >
        <label
          class="ui large compact icon primary right floated left labeled button"
          for="file"
          role="button"
        >
          <i
            aria-hidden="true"
            class="cloud upload icon"
          />
          Upload Document
        </label>
        <input
          hidden=""
          id="file"
          multiple=""
          type="file"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="sixteen wide column"
      >
        <section
          class="noPadding"
        >
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <span
              class="smallLabel"
            >
              Filter by:
            </span>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Approval status
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui orange tiny basic label text"
                  >
                    Pending review
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui teal tiny basic label text"
                  >
                    Approved
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui red tiny basic label text"
                  >
                    Changes needed
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui blue tiny basic label text"
                  >
                    Processed
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui blue tiny basic label text"
                  >
                    Updated
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                File type
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="shipping icon"
                    />
                     Shipping Manifest
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="hospital icon"
                    />
                     Clinical/Phenotype Data
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="dna icon"
                    />
                     Sequencing Manifest
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="question icon"
                    />
                     Other
                  </small>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <span
              class="smallLabel"
            >
              Sorted by:
            </span>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Date option
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Create date
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Modified date
                  </span>
                </div>
              </div>
            </div>
            <button
              class="ui basic icon button"
              data-testid="sort-direction-button"
            >
              <i
                aria-hidden="true"
                class="sort content ascending icon"
              />
            </button>
          </div>
          <div
            class="ui basic compact right floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <div
              class="ui icon input"
            >
              <input
                type="text"
                value=""
              />
              <i
                aria-hidden="true"
                class="search icon"
              />
            </div>
          </div>
        </section>
        <table
          class="ui selectable stackable very basic very compact table"
        >
          <tbody
            class=""
          >
            <tr
              class="cursor-pointer"
              data-testid="file-item"
              style="background-color: inherit;"
            >
              <td
                class="center aligned"
              >
                <div
                  class="ui header"
                >
                  <span>
                    <div
                      class="ui orange tiny basic label"
                    >
                      Pending review
                    </div>
                  </span>
                </div>
              </td>
              <td
                class=""
              >
                <span
                  class="ui medium header"
                >
                  <a
                    href="/study/undefined/documents/SF_5ZPEM167"
                  >
                    organization.jpeg
                  </a>
                </span>
                <p
                  class="noMargin"
                >
                  Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
                </p>
                <div
                  class="ui horizontal link list"
                  role="list"
                >
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="middle aligned content"
                    >
                      <i
                        aria-hidden="true"
                        class="grey hospital small icon"
                      />
                      Clinical/Phenotype Data
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      Modified
                       
                      <time
                        datetime="2018-09-27T05:32:26.000Z"
                        title="27 Sept 2018"
                      >
                        7 months ago
                      </time>
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      3
                       version
                      s
                       
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      5.5 kB
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="center aligned"
              >
                <div
                  class="ui small buttons"
                >
                  <button
                    class="ui basic compact icon button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="download-file"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="trash alternate icon"
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="ui divider"
        />
      </div>
    </div>
    <div
      class="centered row"
    >
      <form>
        <div
          class="ui placeholder piled segment"
        >
          <div
            class="ui icon header"
          >
            <i
              aria-hidden="true"
              class="file outline icon"
            />
            To upload Study Documents drag and drop a file here
            <br />
            <small>
              or
            </small>
          </div>
          <br />
          <label
            class="ui icon primary left labeled button"
            for="file"
            role="button"
          >
            <i
              aria-hidden="true"
              class="file outline icon"
            />
            Choose a file
          </label>
          <input
            hidden=""
            id="file"
            multiple=""
            type="file"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <div
    class="ui basic segment ui container one column grid"
  >
    <div
      class="row"
    >
      <div
        class="ten wide column"
      >
        <h2>
          Study Documents
        </h2>
      </div>
      <div
        class="six wide column"
      >
        <label
          class="ui large compact icon primary right floated left labeled button"
          for="file"
          role="button"
        >
          <i
            aria-hidden="true"
            class="cloud upload icon"
          />
          Upload Document
        </label>
        <input
          hidden=""
          id="file"
          multiple=""
          type="file"
        />
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="sixteen wide column"
      >
        <section
          class="noPadding"
        >
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <span
              class="smallLabel"
            >
              Filter by:
            </span>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Approval status
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui orange tiny basic label text"
                  >
                    Pending review
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui teal tiny basic label text"
                  >
                    Approved
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui red tiny basic label text"
                  >
                    Changes needed
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui blue tiny basic label text"
                  >
                    Processed
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <div
                    class="ui blue tiny basic label text"
                  >
                    Updated
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                File type
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="shipping icon"
                    />
                     Shipping Manifest
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="hospital icon"
                    />
                     Clinical/Phenotype Data
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="dna icon"
                    />
                     Sequencing Manifest
                  </small>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <small
                    class="text"
                  >
                    <i
                      aria-hidden="true"
                      class="question icon"
                    />
                     Other
                  </small>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui basic compact left floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <span
              class="smallLabel"
            >
              Sorted by:
            </span>
            <div
              aria-expanded="false"
              class="ui selection dropdown"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-live="polite"
                class="default text"
                role="alert"
              >
                Date option
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Create date
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Modified date
                  </span>
                </div>
              </div>
            </div>
            <button
              class="ui basic icon button"
              data-testid="sort-direction-button"
            >
              <i
                aria-hidden="true"
                class="sort content ascending icon"
              />
            </button>
          </div>
          <div
            class="ui basic compact right floated segment noMargin noVerticalPadding noHorizontalPadding"
          >
            <div
              class="ui icon input"
            >
              <input
                type="text"
                value=""
              />
              <i
                aria-hidden="true"
                class="search icon"
              />
            </div>
          </div>
        </section>
        <table
          class="ui selectable stackable very basic very compact table"
        >
          <tbody
            class=""
          >
            <tr
              class="cursor-pointer"
              data-testid="file-item"
              style="background-color: inherit;"
            >
              <td
                class="center aligned"
              >
                <div
                  class="ui header"
                >
                  <span>
                    <div
                      class="ui orange tiny basic label"
                    >
                      Pending review
                    </div>
                  </span>
                </div>
              </td>
              <td
                class=""
              >
                <span
                  class="ui medium header"
                >
                  <a
                    href="/study/undefined/documents/SF_5ZPEM167"
                  >
                    organization.jpeg
                  </a>
                </span>
                <p
                  class="noMargin"
                >
                  Month necessary animal end standard case. View system operation message decade. Actually sing becaus...
                </p>
                <div
                  class="ui horizontal link list"
                  role="list"
                >
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="middle aligned content"
                    >
                      <i
                        aria-hidden="true"
                        class="grey hospital small icon"
                      />
                      Clinical/Phenotype Data
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      Modified
                       
                      <time
                        datetime="2018-09-27T05:32:26.000Z"
                        title="27 Sept 2018"
                      >
                        7 months ago
                      </time>
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      3
                       version
                      s
                       
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      5.5 kB
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="center aligned"
              >
                <div
                  class="ui small buttons"
                >
                  <button
                    class="ui basic compact icon button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="download-file"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="trash alternate icon"
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              class="cursor-pointer"
              data-testid="file-item"
              style="background-color: inherit;"
            >
              <td
                class="center aligned"
              >
                <div
                  class="ui header"
                >
                  <span>
                    <div
                      class="ui orange tiny basic label"
                    >
                      Pending review
                    </div>
                  </span>
                </div>
              </td>
              <td
                class=""
              >
                <span
                  class="ui medium header"
                >
                  <a
                    href="/study/undefined/documents/SF_Y07IN1HO"
                  >
                    its.mp3
                  </a>
                </span>
                <p
                  class="noMargin"
                >
                  Question meeting move recognize.
                </p>
                <div
                  class="ui horizontal link list"
                  role="list"
                >
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="middle aligned content"
                    >
                      <i
                        aria-hidden="true"
                        class="grey shipping small icon"
                      />
                      Shipping Manifest
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      Modified
                       
                      <time
                        datetime="2019-04-06T07:51:17.000Z"
                        title="6 Apr 2019"
                      >
                        2 weeks ago
                      </time>
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      5
                       version
                      s
                       
                    </div>
                  </div>
                  <div
                    class="item"
                    role="listitem"
                  >
                    <div
                      class="content"
                    >
                      6.8 kB
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="center aligned"
              >
                <div
                  class="ui small buttons"
                >
                  <button
                    class="ui basic compact icon button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="download-file"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                  </button>
                  <button
                    class="ui basic compact icon button"
                    data-testid="delete-button"
                  >
                    <i
                      aria-hidden="true"
                      class="trash alternate icon"
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="ui divider"
        />
      </div>
    </div>
    <div
      class="centered row"
    >
      <form>
        <div
          class="ui placeholder piled segment"
        >
          <div
            class="ui icon header"
          >
            <i
              aria-hidden="true"
              class="file outline icon"
            />
            To upload Study Documents drag and drop a file here
            <br />
            <small>
              or
            </small>
          </div>
          <br />
          <label
            class="ui icon primary left labeled button"
            for="file"
            role="button"
          >
            <i
              aria-hidden="true"
              class="file outline icon"
            />
            Choose a file
          </label>
          <input
            hidden=""
            id="file"
            multiple=""
            type="file"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`shows an error 1`] = `
<div>
  <div
    class="ui basic segment ui container"
  >
    <div
      class="ui icon negative message"
    >
      <i
        aria-hidden="true"
        class="warning circle icon"
      />
      <div
        class="content"
      >
        <div
          class="header"
        >
          Error
        </div>
        <p>
          Network error: something went wrong
        </p>
      </div>
    </div>
  </div>
</div>
`;
